--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,8 +26,10 @@ install:
   - git clone https://github.com/staticlibs/tools_windows_pkgconfig.git
   - set PATH=%PATH%;c:\projects\tools_windows_pkgconfig\bin
   - git clone https://github.com/staticlibs/cmake.git
-  - git clone --recursive https://github.com/staticlibs/external_zlib.git
-  - git clone --recursive https://github.com/staticlibs/external_xz.git
+  - git clone https://github.com/staticlibs/external_zlib.git
+  - git clone https://github.com/staticlibs/lookaside_zlib.git
+  - git clone https://github.com/staticlibs/external_xz.git
+  - git clone https://github.com/staticlibs/lookaside_xz.git
   - git clone https://github.com/staticlibs/staticlib_config.git
   - git clone https://github.com/staticlibs/staticlib_support.git
   - git clone https://github.com/staticlibs/staticlib_io.git
@@ -36,7 +38,8 @@ install:
   - mkdir test
   - robocopy staticlib_compress\test\data test\data /e /ndl /njh /njs /nc /ns /np || true
   - git clone https://github.com/staticlibs/staticlib_utils.git
-  - git clone --recursive https://github.com/staticlibs/staticlib_tinydir.git
+  - git clone https://github.com/staticlibs/staticlib_tinydir.git
+  - git clone https://github.com/staticlibs/tinydir.git
 
 build: off
 
